# fred-api-rs

./: .gitignore  Cargo.toml  Makefile  README.md  TROUBLESHOOTING.md
docs/: API.md  fred-api-swagger.yaml
docs/prds/: improve-swagger-schema.md
examples/: basic_usage.rs  buffett_macro_indicators.rs  buffett_macro_indicators_series.rs  series_observations.rs
src/apis/: configuration.rs  default_api.rs
