[package]
name = "openapi"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Federal Reserve Economic Data (FRED) API - Economic data from the Federal Reserve Bank of St. Louis"
license = "Terms of Use"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }
